--- a/lab06/part1/code/src/Makefile
+++ b/lab06/part1/code/src/Makefile
@@ -1,20 +1,20 @@
 CC = gcc
-CFLAGS = -Wall -Wextra -std=c11 -O2
+CFLAGS = -Wall -Wextra -std=c11
 LDFLAGS = -lm
 
 all: non_parallel parallel
 
 non_parallel: non_parallel.o
-	$(CC) $(CFLAGS) -o non_parallel non_parallel.o $(LDFLAGS)
+	$(CC) $(CFLAGS) -O2 -o non_parallel non_parallel.o $(LDFLAGS)
 
 non_parallel.o: non_parallel.c
-	$(CC) $(CFLAGS) -c non_parallel.c
+	$(CC) $(CFLAGS) -O2 -c non_parallel.c
 
 parallel: parallel.o
-	$(CC) $(CFLAGS) -o parallel parallel.o $(LDFLAGS)
+	$(CC) $(CFLAGS) -O3 -fopenmp -o parallel parallel.o $(LDFLAGS)
 
 parallel.o: parallel.c
-	$(CC) $(CFLAGS) -c parallel.c
+	$(CC) $(CFLAGS) -O3 -fopenmp -c parallel.c
 
 clean:
 	rm -f non_parallel parallel *.o
