chore: rename reports

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,15 @@
+[submodule "lab02/report/docs"]
+	path = lab02/report/docs
+	url = https://github.com/Lothindir/pandoc-heig.git
+[submodule "lab03/report/docs"]
+	path = lab03/report/docs
+	url = https://github.com/Lothindir/pandoc-heig.git
 [submodule "lab04/docs"]
 	path = lab04/docs
 	url = https://github.com/Lothindir/pandoc-heig.git
 [submodule "lab05/docs"]
 	path = lab05/docs
+	url = https://github.com/Lothindir/pandoc-heig.git
+[submodule "lab06/report/docs"]
+	path = lab06/report/docs
 	url = https://github.com/Lothindir/pandoc-heig.git
